Bug 59190 - [i965 Bisected]X fails to start with headless
Summary: [i965 Bisected]X fails to start with headless
Status: VERIFIED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/General (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Xorg Project Team
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
: 62916 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-01-10 02:36 UTC by lu hua
Modified: 2013-05-20 05:41 UTC (History)
4 users (show)

See Also:
i915 platform:
i915 features:


Attachments
Xorg.0.log (12.40 KB, text/plain)
2013-01-10 02:36 UTC, lu hua
no flags Details

Description lu hua 2013-01-10 02:36:35 UTC
Created attachment 72769 [details]
Xorg.0.log

System Environment:
--------------------------
Arch:           i386
Platform:       Ivybridge
Libdrm:		(master)libdrm-2.4.40-6-g891517f5111cd82909906d5e8ee0299db0d46762
Mesa:		(master)959e83d65075513f989cb1fe634dca314a7e185f
Xserver:(master)xorg-server-1.13.99.901-2-g6703a7c7cf1a349c137e247a0c8eb462ff7b07be
Xf86_video_intel:(master)2.20.17-57-g8881a14200580db731ca6902b289b08989aaa61e
Cairo:		(master)a942938e90a219a0b88153f9fa96c606ce644ef1
Libva:		(staging)2e11d2273b2974a7d1959cbcaf8db5b8e9aedd9e
Libva_intel_driver:(staging)066c9f6532b11e1e3d0457520dea565cd29faea7
Kernel:	(drm-intel-nightly) 84814cd0d035c0da5a5d55c07309a85a1e524d4f

Bug detailed description:
-------------------------
Run: xinit, X fails to start with headless.It fails on (master)xorg-server-1.13.99.901-2. It passes if connect a monitor.
It works well on (server-1.13-branch)xorg-server-1.13.1.901 and (master)xorg-server-1.13.99.901.
It happens on ironlake, sandybridge, ivybridgem haswell.

Bisect shows 6703a7c7cf1a349c137e247a0c8eb462ff7b07be is the first bad commit.
commit 6703a7c7cf1a349c137e247a0c8eb462ff7b07be
Author:     Keith Packard <keithp@keithp.com>
AuthorDate: Tue Jan 8 20:24:32 2013 -0800
Commit:     Keith Packard <keithp@keithp.com>
CommitDate: Tue Jan 8 20:24:32 2013 -0800

    hw/xfree86: Require only one working CRTC to start the server.

    Instead of requiring every mode set to complete successfully, start up
    as long as at least one CRTC is working. This avoids failures when one
    or more CRTCs can't start due to mode setting conflicts.

    Signed-off-by: Keith Packard <keithp@keithp.com>
    Reviewed-by: Dave Airlie <airlied@redhat.com>

output:
Initializing built-in extension DRI2
(EE) module ABI major version (8) doesn't match the server's version (14)
Loading extension GLX

Fatal server error:
AddScreen/ScreenInit failed for driver 0

(EE)
Please consult the The X.Org Foundation support
         at http://wiki.x.org
 for help.
(EE) Please also check the log file at "/opt/X11R7/var/log/Xorg.0.log" for additional information.
(EE)
X: xf86Helper.c:1897: xf86ScrnToScreen: Assertion `pScrn->scrnIndex < screenInfo.numScreens' failed.

Reproduce steps:
----------------
1. Disconnect monitor
2. xinit
Comment 2 lu hua 2013-01-11 02:04:36 UTC
(In reply to comment #1)
> http://lists.x.org/archives/xorg-devel/2013-January/035086.html

Add this patch, It works well.
Comment 3 Gordon Jin 2013-03-06 05:43:05 UTC
Chris, is that patch committed?
Comment 4 Chris Wilson 2013-03-06 08:52:51 UTC
(In reply to comment #3)
> Chris, is that patch committed?

Sent to Keith, he reviewed it, then forgot about it.
Comment 5 Gordon Jin 2013-03-10 04:44:21 UTC
Keith, can you commit it? It badly impacts QA's nighty testing.
Comment 6 Maarten Lankhorst 2013-04-29 09:45:13 UTC
*** Bug 62916 has been marked as a duplicate of this bug. ***
Comment 7 lu hua 2013-05-20 05:40:43 UTC
Fixed.
Comment 8 lu hua 2013-05-20 05:41:03 UTC
Verified.Fixed.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.